@@ -1,5 +1,7 @@
 package emaki.jiuwu.craft.strengthen.model;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 import org.bukkit.inventory.ItemStack;
@@ -8,12 +10,15 @@ public record AttemptContext(ItemStack targetItem, List<ItemStack> materialInput
 
     public AttemptContext {
         targetItem = normalizeItem(targetItem);
-        materialInputs = materialInputs == null
-                ? List.of()
-                : materialInputs.stream()
-                        .map(AttemptContext::normalizeItem)
-                        .filter(itemStack -> itemStack != null)
-                        .toList();
+        if (materialInputs == null || materialInputs.isEmpty()) {
+            materialInputs = List.of();
+        } else {
+            List<ItemStack> normalized = new ArrayList<>(materialInputs.size());
+            for (ItemStack itemStack : materialInputs) {
+                normalized.add(normalizeItem(itemStack));
+            }
+            materialInputs = Collections.unmodifiableList(normalized);
+        }
     }
 
     public static AttemptContext of(ItemStack targetItem, List<ItemStack> materialInputs) {
